Fix overflowing code blocks

--- a/index.css
+++ b/index.css
@@ -72,6 +72,7 @@ code {
 pre>code {
 	display: block;
 	padding: 5px;
+	overflow-x: auto;
 }
 
 /* Syntax */
